--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -134,7 +134,7 @@
                 <div class="col s12 m12 l5 left card text-accent-3 recipe-name">
                         <span class="form-title clearfix">
                             <i class="material-icons medium left">view_list</i>
-                            <h4 class="right-align">3. Zubereitung</h4>
+                            <h4 class="right-align">4. Zubereitung</h4>
                         </span>
                     <div class="divider"></div>
                     <p>Beschreibe hier <strong>Schritt für Schritt</strong> den Ablauf des Rezeptes</p>
@@ -159,7 +159,7 @@
                 <div class="col s12 m12 l6 right card text-accent-3 recipe-name">
                         <span class="form-title clearfix">
                              <i class="material-icons medium left">play_for_work</i>
-                             <h4 class="right-align">4. Zutaten</h4>
+                             <h4 class="right-align">3. Zutaten</h4>
                         </span>
                     <div class="divider"></div>
                     <p>Nenne alle notwendigen <strong>Zutaten</strong> für des Rezeptes</p>
@@ -189,7 +189,9 @@
                                         <option>TL</option>
                                         <option>Prise</option>
                                         <option>Gramm</option>
+                                        <option>Kilo</option>
                                         <option>Liter</option>
+                                        <option>Deziliter</option>
                                         <option>Stück</option>
                                     </select>
                                 </td>
