--- a/Server/public/css/angular-toastr.css
+++ b/Server/public/css/angular-toastr.css
@@ -82,11 +82,11 @@ button.toast-close-button {
   z-index: 999999;
   /*overrides*/
 }
-#toast-container * {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+/*#toast-container * {*/
+  /*-moz-box-sizing: border-box;*/
+  /*-webkit-box-sizing: border-box;*/
+  /*box-sizing: border-box;*/
+/*}*/
 #toast-container > div {
   position: relative;
   overflow: hidden;
@@ -98,9 +98,9 @@ button.toast-close-button {
   border-radius: 3px 3px 3px 3px;
   background-position: 15px center;
   background-repeat: no-repeat;
-  -moz-box-shadow: 0 0 12px #999999;
-  -webkit-box-shadow: 0 0 12px #999999;
-  box-shadow: 0 0 12px #999999;
+  /*-moz-box-shadow: 0 0 12px #999999;*/
+  /*-webkit-box-shadow: 0 0 12px #999999;*/
+  /*box-shadow: 0 0 12px #999999;*/
   color: #ffffff;
   opacity: 0.8;
 }
