--- a/Server/public/views/viewUser.tpl.html
+++ b/Server/public/views/viewUser.tpl.html
@@ -1,8 +1,8 @@
 <div class="user-details">
     <div class="row">
         <div class="col s12 l8">
-            <h3>Mein Account</h3>
-            <h4>Meine Rezepte:</h4>
+            <h3 translate="VIEW_USER_TITLE">Mein Account</h3>
+            <h4 translate="VIEW_USER_RECIPES">Meine Rezepte:</h4>
             <fb-search-resultlist recipes="viewUserCtrl.recipes"
                                   recipe-filter="viewUserCtrl.recipeFilter"></fb-search-resultlist>
         </div>
