--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -4,18 +4,18 @@
         <!--big title-->
         <div class="row title-bg">
             <div class="col s12 l12">
-                <h3 class="">Rezepte <i class="small material-icons prefix">receipt</i></h3>
-                <span>lesen und Kochen</span>
+                <h3 class="" translate="VIEW_RECIPE_TITLE">Rezepte <i class="small material-icons prefix">receipt</i></h3>
+                <span translate="VIEW_RECIPE_SUBTITLE">lesen und Kochen</span>
 
                 <div class="right">
                     <div ng-controller="SessionController as sessionCtrl">
                         <a class="btn btn-flat orange white-text left"
                            href="#/editRecipe/{{viewRecipeCtrl.recipe._id}}"
-                           ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.userId)">Dieses Rezept bearbeiten</a>
+                           ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.userId)" translate="VIEW_RECIPE_BTN_EDIT">Dieses Rezept bearbeiten</a>
 
                         <button class="btn btn-flat white red-text right margin-left" type="button"
                                 ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.userId)"
-                                ng-click="viewRecipeCtrl.deleteRecipe()">Dieses Rezept löschen
+                                ng-click="viewRecipeCtrl.deleteRecipe()" translate="VIEW_RECIPE_BTN_DELETE">Dieses Rezept löschen
                         </button>
                     </div>
                 </div>
@@ -27,7 +27,7 @@
                 <h4>{{viewRecipeCtrl.recipe.title}}</h4>
             </div>
             <div class="col s6 l6 ">
-                <h5>Beschreibung</h5>
+                <h5 translate="VIEW_RECIPE_DESCRIPTION">Beschreibung</h5>
 
                 <p class="flow-text text-accent-1">{{viewRecipeCtrl.recipe.description}}</p>
             </div>
@@ -40,10 +40,6 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" ng-repeat="image in viewRecipeCtrl.recipe.images">
                             <img ng-src="{{image.src}}" class="recipe-img-slider"/>
-                            <br/>
-                            <caption class="img-caption">
-                                (Bild von: {{image.author.name}})
-                            </caption>
                         </div>
                     </div>
                     <div class="swiper-button-prev"></div>
@@ -54,40 +50,40 @@
             <div class="col s12 l6">
                 <div class="card z-depth-2">
                     <div class="card-title blue white-text">
-                        <span>Rezeptdaten</span>
+                        <span translate="VIEW_RECIPE_DATAS">Rezeptdaten</span>
                     </div>
                     <div class="card-content">
-                        <p><strong>Rezept:</strong> {{viewRecipeCtrl.recipe.title}}<br/></p>
+                        <p><strong translate="VIEW_RECIPE_DATA_1">Rezept:</strong> {{viewRecipeCtrl.recipe.title}}<br/></p>
 
-                        <p><strong>Author:</strong> {{viewRecipeCtrl.recipe.userName}}<br/></p>
+                        <p><strong translate="VIEW_RECIPE_DATA_2">Author:</strong> {{viewRecipeCtrl.recipe.userName}}<br/></p>
 
-                        <p><strong>Anzahl Personen:</strong> {{viewRecipeCtrl.recipe.numPerson}}<br/></p>
+                        <p><strong translate="VIEW_RECIPE_DATA_3">Anzahl Personen:</strong> {{viewRecipeCtrl.recipe.numPerson}}<br/></p>
 
-                        <p><strong>Backzeit:</strong> {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/>
+                        <p><strong translate="VIEW_RECIPE_DATA_4">Backzeit:</strong> {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/>
                         </p>
 
-                        <p><strong>Vorbereitungszeit:</strong> {{viewRecipeCtrl.recipe.preparationTime |
+                        <p><strong translate="VIEW_RECIPE_DATA_5">Vorbereitungszeit:</strong> {{viewRecipeCtrl.recipe.preparationTime |
                             minutesToHoursMinutes}}<br/></p>
                     </div>
                 </div>
                 <div class="card z-depth-2">
                     <div class="card-title green white-text">
-                        <span>Vorbereitung: Zutaten</span>
+                        <span translate="VIEW_RECIPE_PREP_TITLE">Vorbereitung: Zutaten</span>
                     </div>
                     <div class="card-content">
                         <div ng-repeat="ingredient in viewRecipeCtrl.recipe.ingredients">
                             <p><strong>{{ingredient.name}}:</strong>&nbsp;
-                                {{ingredient.denomination}}{{ingredient.unit}}<br/></p>
+                                {{ingredient.denomination}}&nbsp;{{ingredient.unit}}<br/></p>
                         </div>
                     </div>
                 </div>
                 <div class="card z-depth-2">
                     <div class="card-title deep-orange white-text">
-                        <span>Zubereitung Schritt für Schritt</span>
+                        <span translate="VIEW_RECIPE_PREP_SBS">Zubereitung Schritt für Schritt</span>
                     </div>
                     <div class="card-content">
                         <div ng-repeat="preparationStep in viewRecipeCtrl.recipe.preparationSteps">
-                            <p><strong>Schritt {{preparationStep.position}}:</strong> {{preparationStep.text}}<br/></p>
+                            <p><strong>{{'VIEW_RECIPE_PREP_STEP' | translate}}{{preparationStep.position}}:</strong> {{preparationStep.text}}<br/></p>
                             <hr>
                         </div>
                     </div>
