--- a/Server/public/css/angular-toastr.css
+++ b/Server/public/css/angular-toastr.css
@@ -17,7 +17,7 @@
   right: -0.3em;
   top: -0.3em;
   float: right;
-  font-size: 20px;
+  font-size:1.2rem;
   font-weight: bold;
   color: #ffffff;
   -webkit-text-shadow: 0 1px 0 #ffffff;
@@ -105,9 +105,9 @@ button.toast-close-button {
   opacity: 0.8;
 }
 #toast-container > :hover {
-  -moz-box-shadow: 0 0 12px #000000;
-  -webkit-box-shadow: 0 0 12px #000000;
-  box-shadow: 0 0 12px #000000;
+  /*-moz-box-shadow: 0 0 12px #000000;*/
+  /*-webkit-box-shadow: 0 0 12px #000000;*/
+  /*box-shadow: 0 0 12px #000000;*/
   opacity: 1;
   cursor: pointer;
 }
