--- a/Server/public/css/fb-styles.css
+++ b/Server/public/css/fb-styles.css
@@ -613,7 +613,7 @@ body {
     font-size: 1.5rem; }
 
 .userForm input.ng-invalid.ng-touched {
-  background-color: #ffc2b8; }
+  background-color: #e0e0e0; }
 
 .userForm input.ng-valid.ng-touched {
   border: 1px solid #0b4730; }
@@ -634,10 +634,21 @@ body {
   color: #777; }
   #loginForm .input-field label.active {
     font-size: 1.2rem;
-    -webkit-transform: translateX(180%) !important;
-        -ms-transform: translateX(180%) !important;
-            transform: translateX(180%) !important;
+    -webkit-transform: translateY(-150%) !important;
+        -ms-transform: translateY(-150%) !important;
+            transform: translateY(-150%) !important;
     color: #1565C0; }
+
+#loginForm #registerForm {
+  background: #039be5; }
+  #loginForm #registerForm .input-field label {
+    color: #004444; }
+    #loginForm #registerForm .input-field label.active {
+      font-size: 1.3rem;
+      -webkit-transform: translateY(250%) !important;
+          -ms-transform: translateY(250%) !important;
+              transform: translateY(250%) !important;
+      color: #44AA44; }
 
 /* ----------------VIEW Search Recipe -----*/
 .searchRecipe {
@@ -708,10 +719,14 @@ body {
     background: #d84315; }
   .editRecipe .btn .disabled {
     background: #F3F3F3; }
+  .editRecipe .btn:focus {
+    border: 1px solid #d84315; }
   .editRecipe .cancel {
     margin-right: 1.4rem; }
   .editRecipe .error {
     color: #07285a; }
+  .editRecipe a:focus {
+    border: 1px solid #d84315; }
 
 .pixupload {
   padding: 1rem; }
@@ -767,6 +782,11 @@ body {
 .table-ingredients td:nth-child(4) {
   width: 5%;
   color: #29b6f6; }
+
+.del-ingredient {
+  font-size: 2rem;
+  color: #CC2222;
+  vertical-align: bottom; }
 
 /*------------ Recipe detail - view -------------------*/
 .viewrecipe {
